app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .text-shadow {
    text-shadow: 2px 2px 4px black;
  }
  .text-shadow-light {
    text-shadow: 2px 2px 4px white;
  }
  .text-shadow-md {
    text-shadow: 4px 4px 8px black;
  }
  .text-shadow-md-light {
    text-shadow: 4px 4px 8px white;
  }
  .text-shadow-xl {
    text-shadow: 15px 15px 30px black;
  }
  .text-shadow-xl-light {
    text-shadow: 15px 15px 30px white;
  }
  .text-shadow-none {
    text-shadow: none;
  }

  @media (min-width: 768px) {
    .md\:text-shadow {
      text-shadow: 2px 2px 4px black;
    }
    .md\:text-shadow-light {
      text-shadow: 2px 2px 4px white;
    }
    .md\:text-shadow-md {
      text-shadow: 4px 4px 8px black;
    }
    .md\:text-shadow-md-light {
      text-shadow: 4px 4px 8px white;
    }
    .md\:text-shadow-xl {
      text-shadow: 15px 15px 30px black;
    }
    .md\:text-shadow-xl-light {
      text-shadow: 15px 15px 30px white;
    }
    .md\:text-shadow-none {
      text-shadow: none;
    }
  }

   

  

  
}
:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
  --accent-color: #504deb;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}
.invalid_input {
  outline: 5px solid red;
}
.alertColor {
  --accent-color: red;
}
.btnFancy {
  appearance: none;
  border: none;
  outline: none;
  padding: 5px 30px;
  border-radius: 6px;
  font-size: 20px;
  font-weight: 600;
  margin: 5px 15px;
  cursor: pointer;
  transition: 0.4s;
  color: var(--accent-color);
  border: 3px solid var(--accent-color);
  background-image: linear-gradient(
    to top,
    var(--accent-color) 50%,
    transparent 50%
  );
  background-size: 100% 200%;
  background-position: 0% 0%;
}
.btnFancy:hover {
  color: #fff;
  background-position: 0% 100%;
}
.btnFancy:active {
  color: #fff;
  background-position: 0% 100%;
}
.btnFancySmall {
  appearance: none;
  border: none;
  outline: none;
  padding: 5px;
  border-radius: 6px;
  font-size: 20px;
  font-weight: 600;
  margin: 5px;
  cursor: pointer;
  transition: 0.4s;
  color: var(--accent-color);
  border: 3px solid var(--accent-color);
  background-image: linear-gradient(
    to top,
    var(--accent-color) 50%,
    transparent 50%
  );
  background-size: 100% 200%;
  background-position: 0% 0%;
}
.btnFancySmall:hover {
  color: #fff;
  background-position: 0% 100%;
}
.btnFancySmall:active {
  color: #fff;
  background-position: 0% 100%;
}
@keyframes spinLogo {
  to {
      transform: rotateY(360deg);
  }
}
.logoTransform {
  transform-style: preserve-3d;
  -webkit-transform-style: preserve-3d;
  perspective: 1200px;
  transform:translateZ(-600px);
}
.spinLogo { 
  
  animation: spinLogo 6s linear infinite;
}
@keyframes loader {
  0% {
    rotate: y 0deg;
    scale: 1;
  }
  25% {
    rotate: y 90deg;
    scale: 0.75;
  }
  50% {
    rotate: y 180deg;
    scale: 0.5;
  }
  75% {
    rotate: y 270deg;
    scale: 0.75;
  }
  100% {
    rotate: y 360deg;
    scale: 1;
  }
}

.blurFilter {
  backdrop-filter: blur(12px);
  -webkit-backdrop-filter:blur(12px);

}
.bgGradientSize50 {
  background-image: linear-gradient(
    120deg,
    rgba(255, 255, 255, 0.3),
    rgba(0, 0, 0, 0.2)
  );
  background-size: 50px 50px;
}
 
.cards__item { 
   
  transform:  translate( var(--item-x), var(--item-y) )  ;
}
.centerOrigin {
   
  object-position: 50% 50%;
 
}

.teamMember {
  transform-style: preserve-3d;
  -webkit-transform-style: preserve-3d;
}
.teamMember:hover {
  transform: rotateY(180deg);
  -webkit-transform: rotateY(180deg);
-moz-transform: rotateY(180deg);
-ms-transform: rotateY(180deg);
-o-transform: rotateY(180deg);
} 
.animatePageMainDiv{
  transform: rotateY(90deg);
  -webkit-transform: rotateY(90deg);
  -moz-transform: rotateY(90deg);
  -ms-transform: rotateY(90deg);
  -o-transform: rotateY(90deg);
}
.team .teamMemberFront {
  backface-visibility: 'hidden';
  -webkit-backface-visibility: 'hidden'; /* Safari */
}
.teamMemberBio {
  -ms-transform: rotateY(180deg);
  -webkit-transform: rotateY(180deg);
  -moz-transform: rotateY(180deg);
  -o-transform: rotateY(180deg);
  transform: rotateY(180deg);
  backface-visibility: 'hidden';
  -webkit-backface-visibility: 'hidden'; /* Safari */
}

